--- a/css/cntctUSCntent.css
+++ b/css/cntctUSCntent.css
@@ -1,2 +1,2 @@
-@import url("cntctUsImports/formPos.css");
-@import url("cntctUsImports/blnk.css");
+@import url("/TjeyaElectricals/cntctUsImports/formPos.css");
+@import url("/TjeyaElectricals/cntctUsImports/blnk.css");
