--- a/css/cntent.css
+++ b/css/cntent.css
@@ -1,11 +1,11 @@
 /*floating card of business summary*/
-@import url("imports/fltngCrd.css");
+@import url("/TjeyaElectricals/imports/fltngCrd.css");
 /*products&services*/
-@import url("imports/prdNdSrvcs.css");
+@import url("/TjeyaElectricals/imports/prdNdSrvcs.css");
 /*final section*/
-@import url("imports/banner.css");
+@import url("/TjeyaElectricals/imports/banner.css");
 /*mainQry*/
-@import url("imports/mediaQueries.css");
+@import url("/TjeyaElectricals/imports/mediaQueries.css");
 
 
 
