--- a/css/imports/banner.css
+++ b/css/imports/banner.css
@@ -3,7 +3,7 @@
     height:280px;
     background-size:cover;
     background-repeat:no-repeat;
-    background-image: url("/includes/images/srvcBg.jpg");
+    background-image: url("/TjeyaElectricals/includes/images/srvcBg.jpg");
     display: flex;
     flex-direction: column;
     justify-content: center;
