--- a/css/imports/prdNdSrvcs.css
+++ b/css/imports/prdNdSrvcs.css
@@ -58,15 +58,15 @@
 }
     
 .box-1{
-    background-image:url("/includes/images/srvcBg.jpg");
+    background-image:url("/TjeyaElectricals/includes/images/srvcBg.jpg");
 }
     
 .box-2{
-    background-image:url("/includes/images/srvcBg.jpg");
+    background-image:url("/TjeyaElectricals/includes/images/srvcBg.jpg");
 }
     
 .box-3{
-    background-image: url("/includes/images/srvcBg.jpg");
+    background-image: url("/TjeyaElectricals/includes/images/srvcBg.jpg");
 }
     
 .box-1 span,.box-2 span,.box-3 span{
